@@ -7,6 +7,7 @@ Changes:
 - Add webgui code improvements.
 - Add Swap mode option for zroot.
 - Add CPU microcode update feature option.
+- Add handling instructions for smartmontools for unkown USB mass storage devices.
 - Upgrade e2fsprogs to 1.43.5.
 - Upgrade phpvirtualbox to 5.1.1.
 - Upgrade lcdproc to 0.5.9.
